--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -24,6 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
+                    <a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
                     <div class="nav-collapse">
 
                         <ul class="nav">
