--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -28,7 +28,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand hidden" href="#">Search</a>
+                    <a class="btn btn-navbar app-ico ico_shop_bag btn-cart hidden" href="{% url checkout:index %}">
+                        <strong>Basket 
+                        {% if request.basket.lines.count %}
+                            Total: {{ basket.total_incl_tax|currency }}
+                        {% endif %}
+                        </strong>
+                    </a>
+                    <a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
                     <div class="nav-collapse">
                         <div id="browse" class="nav dropdown">
                             {% category_tree depth=2 as categories %}
