--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -16,21 +16,130 @@ Order management | {{ block.super }}
 {% endblock %}
 
 {% block header %}
-<div class="page-header action">
-    <h1>Order management</h1><a href="#" class="pull_out">Search Orders</a>
-    <div class="orders_search">
-        <form action="." method="get" class="form-horizontal">
-            {% include "partials/form_fields.html" with form=form %}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Search</button>
-            </div>
-        </form>
-    </div> 
+<div class="page-header">
+    <h1>Order management</h1>
 </div>
 {% endblock header %}
 
 {% block dashboard_content %}
 
+<div class="well well-info">
+    <div class="sub-header">
+        <h3>Quick Order Search &nbsp;&nbsp;<small><a href="#" class="app-ico ico_magnify pull_out">Advanced Search</a></small></h3>
+    </div>
+    <form action="." method="get" class="form-horizontal">
+        <!-- {% include "partials/form_fields.html" with form=form %} -->
+        {{ form.non_field_errors }}
+        <div class="control-group {% for error in form.order_number.errors %}error{% endfor %}">
+            <label for="id_order_number">Order number:</label>
+            <div class="controls">
+                {{ form.order_number }}
+                {% for error in form.order_number.errors %}
+                <span class="help-block">
+                    {{ error|escape }}
+                </span>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="orders_search">
+            <div class="control-group {% for error in form.name.errors %}error{% endfor %}">
+                <label for="id_name">Customer name:</label>
+                <div class="controls">
+                    {{ form.name }}
+                    {% for error in form.name.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.product_title.errors %}error{% endfor %}">
+                <label for="id_product_title">Product name:</label>
+                <div class="controls">
+                    {{ form.product_title }}
+                    {% for error in form.product_title.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.product_id.errors %}error{% endfor %}">
+                <label for="id_product_id">Product ID</label>
+                <div class="controls">
+                    {{ form.product_id }}
+                    {% for error in form.product_id.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.status.errors %}error{% endfor %}">
+                <label for="id_status">Order number:</label>
+                <div class="controls">
+                    {{ form.status }}
+                    {% for error in form.status.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.date_from.errors %}error{% endfor %}">
+                <label for="id_date_from">Date from:</label>
+                <div class="controls">
+                    {{ form.date_from }}
+                    {% for error in form.date_from.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.date_to.errors %}error{% endfor %}">
+                <label for="id_date_to">Date to:</label>
+                <div class="controls">
+                    {{ form.date_to }}
+                    {% for error in form.date_to.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="control-group {% for error in form.voucher.errors %}error{% endfor %}">
+                <label for="id_voucher">Voucher code:</label>
+                <div class="controls">
+                    {{ form.voucher }}
+                    {% for error in form.voucher.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="control-group {% for error in form.response_format_0.errors %}error{% endfor %}">
+            <label for="id_response_format_0">Get results as:</label>
+            <div class="controls">
+                <label class="radio inline" for="id_response_format_0">
+                    {{ form.response_format }}
+                    {% for error in form.response_format.errors %}
+                    <span class="help-block">
+                        {{ error|escape }}
+                    </span>
+                    {% endfor %}
+                </label>
+            </div>
+        </div>
+
+
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </div>
+    </form>
+</div>
 
 <div class="sub-header">
     <h2>{{ queryset_description }}</h2>
