fixed promotions in browse template, fixed loop over additional images in gallery, fixed css with subcategory browse drop down

--- a/oscar/static/css/styles.css
+++ b/oscar/static/css/styles.css
@@ -2876,6 +2876,7 @@ body {
   border: 1px solid #ddd;
   border-top-width: 0px;
   margin-bottom: 0px;
+  position: relative;
 }
 /* Account Navbar */
 .navbar.accounts .nav div {
