--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -74,7 +74,8 @@
             {% basket_form basket product as basket_form %}
             <form action="{% url basket:add %}" method="post" class="form-stacked">
                 {% csrf_token %}
-                {{ basket_form.as_p }}
+                {% include "partials/form_fields.html" with form=basket_form %}
+            	
                 <div class="form-actions">
                     <input type="submit" class="btn btn-large btn-primary" value="Add to basket" />
                 </div>
