--- a/oscar/static/less/page/product_lists.less
+++ b/oscar/static/less/page/product_lists.less
@@ -74,7 +74,8 @@
     width:84%;
     form {
       margin-bottom:0px;
-      input#id_quantity {
+      input#id_quantity,
+      #id_product_id {
         width:90%;
       }
     }
