--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -37,12 +37,18 @@
             {% include "catalogue/partials/gallery.html" %}
         </div><!-- /span6 -->
         <div class="span6">
-            <h1>
-                {{ product.get_title }}  
+            <h1>{{ product.get_title }}</h1>
+            
+            {% if product.is_group %}
+                <h2 class="price_color">From {{ product.min_variant_price_incl_tax|currency }}</h2>
+            {% else %}
                 {% if product.has_stockrecord %} 
-                    <span class="price_color">{{ product.stockrecord.price_incl_tax|currency }}</span>
+                    <h2 class="price_color">{{ product.stockrecord.price_incl_tax|currency }}</h2>
+                    <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2 }}</p>
+                {% else %}
+                    <p class="app-ico avaliability outofstock">Not available</p>
                 {% endif %}
-            </h1>
+            {% endif %}
             
             {% with product.reviews.all as reviews %}
                 {% if reviews %}
@@ -57,11 +63,6 @@
             {% endwith %}
             
             <p><strong>Product Code:</strong> <code>{{ product.upc }}</code></p>
-            {% if product.stockrecord %}
-			<p class="app-ico {{ product.stockrecord.availability_code }} avaliability">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
-			{% else %}
-				<p class="app-ico avaliability outofstock">Not available</p>
-            {% endif %}
              
             <hr/>
             <ul>
