--- a/oscar/templates/customer/order-history.html
+++ b/oscar/templates/customer/order-history.html
@@ -14,21 +14,15 @@ Order history | {{ block.super }}
 
 {% block content %}
 
-<div class="sub-header">
-    <h3>Order history</h3>
-</div>
-
-<h2>Search in orders</h2>
+<h3>Search in orders</h3>
 <form action="." method="get">
-    <table>
-        {{ search_date_form.as_table }}
-        <tr>
-            <td>
-                <button type="submit" class="btn btn-primary">Filter results</button>
-            </td>
-    </table>
+	{% include "partials/form_fields.html" with form=form %}
+	<button type="submit" class="btn btn-primary">Filter results</button>
+	<a href="{% url customer:order-list %}" class="btn">Reset</a>
 </form>
 
+<h3>{{ form.description }}</h3>
+{% if orders %}
 <table class="table table-striped table-bordered">
     <tr>
         <th>Order number</th>
@@ -42,12 +36,14 @@ Order history | {{ block.super }}
         <td>{{ order.total_incl_tax|currency }}</td>
         <td>{{ order.date_placed }}</td>
         <td>
-            <a href="{% url customer:order order.number %}">View order details</a>
+            <a class="btn btn-info" href="{% url customer:order order.number %}">View</a>
         </td>
     </tr>
     {% endfor %}
-
 </table>
+{% else %}
+<p>No orders found</p>
+{% endif %}
 
 {% if page_obj %}
 {% include "catalogue/partials/pagination.html" %}
