--- a/oscar/templates/dashboard/promotions/page_detail.html
+++ b/oscar/templates/dashboard/promotions/page_detail.html
@@ -1,25 +1,30 @@
 {% extends 'dashboard/layout.html' %}
 {% block body_class %}promotions{% endblock %}
 {% block title %}
-Content blocks for page {{ page }} | {{ block.super }}
+Content blocks for page {{ page_url }} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Dashboard</a>
+        <a href="{% url dashboard:index %}">Dashboard</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Promotions</a></li>
+    <li>
+        <a href="{% url dashboard:promotion-list %}">Content blocks</a>
+        <span class="divider">/</span>
+    </li>
+	<li class="active"><a href=".">Content blocks on page '{{ page_url }}'</a></li>
 </ul>
 {% endblock %}
 
-{% block dashboard_content %}
-<!-- {% block header %}
+{% block header %}
 <div class="page-header">
-	<h1>Content blocks for page {{ page }}</h1>
+	<h1>Content blocks for page {{ page_url }}</h1>
 </div>
-{% endblock %} -->
+{% endblock %}
+
+{% block dashboard_content %}
 {% for position in positions %}
 <div class="sub-header">
 	<h2>Edit promotions in position '{{ position.name }}'</h2>
@@ -33,9 +38,9 @@ Content blocks for page {{ page }} | {{ block.super }}
 			<th>Actions</th>
 		</tr>
 	</thead>
-	<tbody>
+	<tbody class="promotion_list">
 		{% for promotion in position.promotions %}
-		<tr>
+		<tr id="promo_{{ promotion.pk }}">
 			<td>{{ promotion.content_object.name }}</td>
 			<td>{{ promotion.content_object.type }}</td>
 			<td>
@@ -47,16 +52,6 @@ Content blocks for page {{ page }} | {{ block.super }}
 		{% endfor %}
 	</tbody>
 </table>
-<!-- <ul class="promotion_list">
-    {% for promotion in position.promotions %}
-    <li id="promo_{{ promotion.pk }}">
-    {{ promotion.content_object.name }} - Type: {{ promotion.content_object.type }}
-    <a href="{% url dashboard:promotion-update promotion.content_object.code promotion.content_object.id %}" class="btn btn-success">Edit</a>
-    <a href="#" class="btn btn-info btn-handle">Re-order</a>
-    <a href="{% url dashboard:pagepromotion-delete promotion.id %}" class="btn btn-danger">Remove</a>
-    </li>
-    {% endfor %}
-</ul> -->
 {% else %}
     <p>No promotions in this position.</p>
 {% endif %}
