--- a/oscar/static/less/dashboard.less
+++ b/oscar/static/less/dashboard.less
@@ -170,8 +170,8 @@ button {
         line-height: 36px;*/
     }
 }
-h2 {
-/*    font-size: 18px;*/
+h3 {
+  margin-bottom:@baseLineHeight / 4;
 }
 .control-group.pull-left {
   > label {
@@ -279,6 +279,17 @@ h2 {
     list-style:none;
   }
 }
+.form-inline {
+  margin-bottom:0px;
+}
+.icon:before {
+  padding:7px 6px;
+  background:@black;
+  #translucent > .background(@black,0.15);
+  .border-radius(20px);
+  color:@white;
+  margin-right:5px;
+}
 .file_upload {
   .clearfix();
   form, p {
@@ -319,28 +330,5 @@ h2 {
   margin-bottom:0px;
   li.active a {
     background-color:#efefef;
-  }
-}
-.fontsize {
-  ul {
-    .clearfix();
-    margin-left:10px;
-    margin-bottom:0px;
-  }
-  li {
-    float:left;
-    list-style:none;
-    margin-right:10px;
-    line-height: 27px;
-    padding-top: 6px;
-  }
-  #larger,
-  #smaller {
-    cursor:pointer;
-    color:@linkColor;
-  }
-  #larger {
-    font-size: @baseFontSize + 5;
-    line-height:23px;
   }
 }
