--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -23,18 +23,37 @@ Order {{ order.number }} | {{ block.super }}
 
 {% block dashboard_content %}
 
+<div class="well-blank">
+	<div class="sub-header">
+	    <h2>Customer Information</h2>
+	</div>
+	{% if order.user %}
+	<table class="table table-striped table-bordered">
+	    <tr>
+	        <th>Username</th>
+			<th>Name</th>
+	        <th>Email address</th>
+	    </tr>
+		<tr>
+			<td><a href="{% url dashboard:user-detail order.user.id %}">{{ order.user.username }}</a></td>
+	        <td>{{ order.user.get_full_name|default:"-" }}</td>
+	        <td>{{ order.user.email|default:"-" }}</td>
+	    </tr>
+	</table>
+	{% else %}
+	<p>Customer checked out anonymously.</p>
+	{% endif %}
+	
+	
 <div class="sub-header">
     <h2>Order information</h2>
 </div>
-<div class="well">
 <table class="table table-striped table-bordered">
     <tr>
 		<th>Order Number</th>
 		<th>Order Total</th>
         <th>Date of purchase</th>
         <th>Time of purchase</th>
-		<th>Customer</th>
-		<th>Email Address</th>
         <th>Status</th>
     </tr>
     <tr>
@@ -42,12 +61,12 @@ Order {{ order.number }} | {{ block.super }}
 		<td>{{ order.total_incl_tax|currency }}</td>
         <td>{{ order.date_placed|date:"d/m/y" }}</td>
         <td>{{ order.date_placed|date:"H:s" }}</td>
-		<td>{{ order.user.get_full_name|default:"-" }}</td>
-		<td>{{ order.user.email|default:"-" }}</td>
         <td>{{ order.status|default:"N/A" }}</td>
     </tr>
 </table>
 </div>
+
+<div class="well">
 
 <div class="sub-header">
     <h2>Order Details</h2>
@@ -208,8 +227,143 @@ Order {{ order.number }} | {{ block.super }}
 			    <div class="alert-actions"><a href="{% url dashboard:order-shipping-address order.number %}" class="btn">Edit shipping address</a></div>
 			</div>
 			{% endif %}
+			<div class="sub-header">
+			    <h2>Shipping Events</h2>
+			</div>
+			{% with events=order.shipping_events.all %}
+			{% if events %}
+			<table class="table table-striped table-bordered">
+			    <thead>
+				<tr>
+					<th>Date</th>
+					<th>Event</th>
+					<th>Lines</th>
+					<th>Notes</th>
+				</tr>
+			    </thead>
+			    <tbody>
+				{% for event in events %}
+				{% with line_qtys=event.line_quantities.all %}
+				<tr>
+					<td rowspan="{{ line_qtys|length }}">{{ event.date }}</td>
+					<td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
+					<td>
+						<table>
+							{% for line_qty in event.line_quantities.all %}
+							<tr>
+								<td>Product: {{ line_qty.line.title }}</td>
+								<td>Quantity: {{ line_qty.quantity }}</td>
+							</tr>
+							{% endfor %}
+						</table>
+					</td>
+					<td>{{ event.notes }}</td>
+				</tr>
+				{% endwith %}
+				{% endfor %}
+			</tbody>
+			</table>
+			{% else %}
+			<p>No shipping events.</p>
+			{% endif %}
+			{% endwith %}
+			
 		</div>
 		<div class="tab-pane" id="3">
+			<div class="sub-header">
+			    <h2>Payment</h2>
+			</div>
+			{% with sources=order.sources.all %}
+			{% if sources %}
+			<table class="table table-striped table-bordered">    
+			    <thead>  
+			        <tr>
+			            <th>Source</th>
+			            <th>Allocation</th>
+			            <th>Amount debited</th>
+			            <th>Amount refunded</th>
+			        </tr>  
+			    </thead>	
+			    <tbody> 
+			        {% for source in sources %}
+			        <tr>
+			            <td>{{ source.source_type }}</td>
+			            <td>{{ source.amount_allocated|currency }}</td>
+			            <td>{{ source.amount_debited|currency }}</td>
+			            <td>{{ source.amount_refunded|currency }}</td>
+			        </tr>
+			        {% endfor %}
+			    </tbody>	
+			</table>
+			{% else %}
+			<p>No payment sources</p>
+			{% endif %}
+			{% endwith %}
+
+			<div class="sub-header">
+			    <h2>Discounts</h2>
+			</div>
+			{% with discounts=order.discounts.all %}
+			{% if discounts %}
+			<table class="table table-striped table-bordered">
+			    <tr>
+			        <th>Voucher code</th>
+			        <th>Offer name</th>
+			        <th>Amount</th>
+			    </tr>
+			    {% for discount in discounts %}
+			    <tr>
+			        <td>{{ discount.voucher_code }}</td>
+			        <td>{{ discount.offer.name }}</td>
+			        <td>{{ discount.amount|currency}}</td>
+			    </tr>
+			    {% endfor %}
+			{% else %}
+			<p>No discounts were applied in this order.</p>
+			{% endif %}
+			{% endwith %}
+			
+			<div class="sub-header">
+			    <h2>Payment Events</h2>
+			</div>
+			{% with events=order.payment_events.all %}
+			{% if events %}
+			<table class="table table-striped table-bordered">
+			    <thead>
+			        <tr>
+			            <th>Date</th>
+			            <th>Event</th>
+			            <th>Amount</th>
+			            <th>Lines</th>
+			        </tr>
+			    </thead>
+			    <tbody>
+			        {% for event in events %}
+			        {% with line_qtys=event.line_quantities.all %}
+			        <tr>
+			            <td rowspan="{{ line_qtys|length }}">{{ event.date }}</td>
+			            <td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
+			            <td rowspan="{{ line_qtys|length }}">{{ event.amount|currency }}</td>
+			            <td>
+			                <table>
+			                    {% for line_qty in event.line_quantities.all %}
+			                    <tr>
+			                        <td>Product: {{ line_qty.line.title }}</td>
+			                        <td>Quantity: {{ line_qty.quantity }}</td>
+			                    </tr>
+			                    {% endfor %}
+			                </table>
+			                <td>
+			                </tr>
+			                {% endwith %}
+			                {% endfor %}
+			            </tbody>
+			        </table>
+			{% else %}
+			<p>No payment events.</p>
+			{% endif %}
+			{% endwith %}
+			
 		</div>
 		<div class="tab-pane" id="4">
 		</div>
@@ -283,165 +437,8 @@ Order {{ order.number }} | {{ block.super }}
 		</div>
 	</div>
 </div>
-
-
-<!-- <div class="sub-header">
-    <h2>Customer</h2>
 </div>
-{% if order.user %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Username</th>
-        <td><a href="{% url dashboard:user-detail order.user.id %}">{{ order.user.username }}</a></td>
-    </tr>
-    <tr>
-        <th>Name</th>
-        <td>{{ order.user.get_full_name|default:"-" }}</td>
-    </tr>
-    <tr>
-        <th>Email address</th>
-        <td>{{ order.user.email|default:"-" }}</td>
-    </tr>
-</table>
-{% else %}
-<p>Customer checked out anonymously.</p>
-{% endif %} -->
 
-<!-- <div class="sub-header">
-    <h2>Payment</h2>
-</div>
-{% with sources=order.sources.all %}
-{% if sources %}
-<table class="table table-striped table-bordered">    
-    <thead>  
-        <tr>
-            <th>Source</th>
-            <th>Allocation</th>
-            <th>Amount debited</th>
-            <th>Amount refunded</th>
-        </tr>  
-    </thead>	
-    <tbody> 
-        {% for source in sources %}
-        <tr>
-            <td>{{ source.source_type }}</td>
-            <td>{{ source.amount_allocated|currency }}</td>
-            <td>{{ source.amount_debited|currency }}</td>
-            <td>{{ source.amount_refunded|currency }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>	
-</table>
-{% else %}
-<p>No payment sources</p>
-{% endif %}
-{% endwith %}
-
-<div class="sub-header">
-    <h2>Discounts</h2>
-</div>
-{% with discounts=order.discounts.all %}
-{% if discounts %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Voucher code</th>
-        <th>Offer name</th>
-        <th>Amount</th>
-    </tr>
-    {% for discount in discounts %}
-    <tr>
-        <td>{{ discount.voucher_code }}</td>
-        <td>{{ discount.offer.name }}</td>
-        <td>{{ discount.amount|currency}}</td>
-    </tr>
-    {% endfor %}
-{% else %}
-<p>No discounts were applied in this order.</p>
-{% endif %}
-{% endwith %}
-
-
-<div class="sub-header">
-    <h2>Shipping Events</h2>
-</div>
-{% with events=order.shipping_events.all %}
-{% if events %}
-<table class="table table-striped table-bordered">
-    <thead>
-	<tr>
-		<th>Date</th>
-		<th>Event</th>
-		<th>Lines</th>
-		<th>Notes</th>
-	</tr>
-    </thead>
-    <tbody>
-	{% for event in events %}
-	{% with line_qtys=event.line_quantities.all %}
-	<tr>
-		<td rowspan="{{ line_qtys|length }}">{{ event.date }}</td>
-		<td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
-		<td>
-			<table>
-				{% for line_qty in event.line_quantities.all %}
-				<tr>
-					<td>Product: {{ line_qty.line.title }}</td>
-					<td>Quantity: {{ line_qty.quantity }}</td>
-				</tr>
-				{% endfor %}
-			</table>
-		</td>
-		<td>{{ event.notes }}</td>
-	</tr>
-	{% endwith %}
-	{% endfor %}
-</tbody>
-</table>
-{% else %}
-<p>No shipping events.</p>
-{% endif %}
-{% endwith %}
-
-<div class="sub-header">
-    <h2>Payment Events</h2>
-</div>
-{% with events=order.payment_events.all %}
-{% if events %}
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Event</th>
-            <th>Amount</th>
-            <th>Lines</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for event in events %}
-        {% with line_qtys=event.line_quantities.all %}
-        <tr>
-            <td rowspan="{{ line_qtys|length }}">{{ event.date }}</td>
-            <td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
-            <td rowspan="{{ line_qtys|length }}">{{ event.amount|currency }}</td>
-            <td>
-                <table>
-                    {% for line_qty in event.line_quantities.all %}
-                    <tr>
-                        <td>Product: {{ line_qty.line.title }}</td>
-                        <td>Quantity: {{ line_qty.quantity }}</td>
-                    </tr>
-                    {% endfor %}
-                </table>
-                <td>
-                </tr>
-                {% endwith %}
-                {% endfor %}
-            </tbody>
-        </table>
-{% else %}
-<p>No payment events.</p>
-{% endif %}
-{% endwith %} -->
 
 {% endblock dashboard_content %}
 
